# axon

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
docs/: agent_frameworks_bar_chart.md  agent_frameworks_comparison.md
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/.cargo/: config.toml
frontend/scripts/: jit-open-props.sh
frontend/src/: api.rs  app.rs  main.rs  style.css
src/: app.rs  cli.rs  commands.rs  config.rs  main.rs  runner.rs
src/agent/: mod.rs
src/context/: git.rs  mod.rs
src/daemon/: ensure.rs  mod.rs  proto.rs
src/llm/: daemon.rs  local.rs  mod.rs  ollama.rs
src/server/: mod.rs  tasks.rs  teams.rs
src/session/: message.rs  mod.rs
src/skills/: mod.rs
src/swarm/: agent.rs  mod.rs  store.rs  teams.rs  tools.rs
src/tools/: fs.rs  mcp.rs  mod.rs  shell.rs  web.rs
src/ui/: chat.rs  input.rs  status.rs
src/workflow/: executor.rs  mod.rs  parser.rs  planner.rs  workspace.rs
