[package]
name = "axon"
version = "0.1.0"
description = "Terminal-based AI coding assistant for local LLMs"
authors = ["anand"]
license = "Apache-2.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.30.0"
color-eyre = "0.6.3"

# https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
