[package]
name = "axon"
version = "0.1.0"
description = "Terminal-based AI coding assistant for local LLMs"
authors = ["anand"]
license = "Apache-2.0"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.30"
color-eyre = "0.6.3"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
futures = "0.3.32"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
tui-textarea = "0.7.0"
llama-cpp-2 = "0.1"
hf-hub = "0.3"
encoding_rs = "0.8"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
dirs = "5"
chrono = "0.4"
autoagents = { version = "0.3.7", features = ["ollama", "logging"] }
autoagents-derive = "0.3.7"
autoagents-toolkit = { version = "0.3.7", features = ["filesystem"] }
axum = { version = "0.7", features = ["ws"] }
# No `debug-embed`: in debug builds assets are read from `frontend/dist` on disk,
# so a fresh `trunk build` (e.g. after the developer agent implements a change) is
# served live. Release builds still embed the assets into the binary.
rust-embed = "8"
tokio-stream = "0.1.18"
rusqlite = { version = "0.32", features = ["bundled"] }
rust-mcp-sdk = "0.9.0"

# https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
